sylvander-tui/tests/snapshots/snapshots__permissions_picker_shows_workspace_scoped_runtime_policy.snap
---
source: sylvander-tui/tests/snapshots.rs
assertion_line: 588
expression: "render_buf(state, 100, 28)"
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
  Permissions · workspace scoped · applies next turn                                                
  root  /workspace/sylvander                                                                        
  › filesystem  workspace write                                                                     
    network     denied                                                                              
    approval    ask                                                                                 
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
/permissions  ←→ change selected value                                                              
────────────────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch —                                          connecting…   draft local
