sylvander-tui/tests/snapshots/snapshots__queued_prompt_is_visible_but_not_rendered_as_sent.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 110, 30)"
---
              ⢀⣤⣴⡆               Sylvander                                                                    
            ⢀⣚⣿⣿⣿⣿⢓⣀             agent workspace                                                              
         ⢀⣴⣾⢿⣳⡿⠛⠙⢿⣾⣿⣷⣦           model     —                                                                  
  ⢀ ⣴⠆  ⣰⣿⣿⣵⠟⠉    ⠙⠻⣿⠿⣾⣦         workspace ~/workspace                                                        
 ⠈⠛⠃⡁⡀  ⣿⡻⢾⡇ ⣶⣶  ⣶⣆ ⢻⣥⣿⣿⡄        branch    — · session new                                                    
 ⢀⣤⣶⣿⡣⣤⢀⢽⠿⣮⢷⣄⣉⠁  ⠉⣁⣤⡎⣵⠟⣭⣁⡔⢿⣄⡀                                                                                 
 ⣾⣿⠛⢹⡇⠈⢨⣶⡶⠎⢛⡿⣿⣳⡆⣶⣿⡿⣟⣋⢷⣶⣮⡅⢸⡜⢿⣿⡄   What should we work through?                                                 
 ⠈⠻⠁   ⠘⠞⠁ ⠒⠁ ⠉⠁⠉⠉ ⠉⠑ ⠈⣿⠇ ⠁⠈⠿⠁                                                                                
                                                                                                              
                                                                                                              
❯ finish the current implementation                                                                           
                                                                                                              
↳  then run the full test suite                                                                               
   queued                                                                                                     
                                                                                                              
⏺ I am still working on the first request.                                                                    
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                             
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
◌ working · model — · branch — · 1 queued                                               esc interrupt   /draft
