sylvander-tui/tests/snapshots/snapshots__sessions_overlay_with_filter_match.snap
---
source: sylvander-tui/tests/snapshots.rs
assertion_line: 439
expression: "render_buf(state, 90, 22)"
---
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                         
──────────────────────────────────────────────────────────────────────────────────────────
  Resume a session                                                             3 matches  
  Loading one session replaces the current conversation.                                  
  › auth-refactor           ~/Projects/acme-api               2m ago                      
    auth-debug              ~/Projects/acme-api               1h ago                      
    login-tests             ~/Projects/web                    1d ago                      
──────────────────────────────────────────────────────────────────────────────────────────
/resume                                                                                   
──────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
