sylvander-tui/tests/snapshots/snapshots__tool_call_done_with_output.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 80, 24)"
---
Sylvander · deepseek-v4-flash · Disconnected · Connecting...                    
You: list src                                                                   
[+] bash({"command":"ls src"})                                                  
  + bash: main.rslib.rs                                                         
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
>                                                                               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
Enter:send  Esc:quit  Ctrl+C:quit
