sylvander-tui/tests/snapshots/snapshots__tool_call_in_progress.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 80, 24)"
---
        ⢀⣠⣶⣾⣀           Sylvander                                               
      ⣠⣴⣶⣾⠿⢿⣷⣶⣤⡀        agent workspace                                         
⢀⣄⡴⠆ ⣴⣿⣿⠋⣁ ⢀⡙⢻⣟⣿⡆                                                               
 ⣩⣶⣆⡀⣿⣿⣯⡘⠿ ⠸⠟⣠⣿⣿⡻⣠⣄⡀    model     —                                             
⢾⣟⢻⠇⢋⣿⡾⢻⡿⣷⡆⣾⡿⣿⡿⣾⣯⠹⡿⣿⡄   workspace ~/workspace                                   
 ⠁   ⠋ ⠈      ⠁⠈⠋  ⠘    branch    — · session new                               
                        What should we work through?                            
                                                                                
                                                                                
❯ list src                                                                      
⏺ Run `ls`     00s                                                              
  ⎿  $ ls src                                                                   
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
