sylvander-tui/tests/snapshots/snapshots__tool_output_inspection_uses_review_view.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 100, 24)"
---
  bash output · call-123                                                                   3 lines  
────────────────────────────────────────────────────────────────────────────────────────────────────
      1  checking workspace                                                                         
      2  warning: one issue                                                                         
      3  verification complete                                                                      
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
n next match · c copy full output                                                                   
● reviewing tool output · model — · branch —                        ↑↓ scroll   / search · esc close
