sylvander-tui/tests/snapshots/snapshots__unicode_transcript_wraps_by_terminal_cells_without_splitting_graphemes.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 80, 26)"
---
              ⢀⣤⣴⡆               Sylvander                                      
            ⢀⣚⣿⣿⣿⣿⢓⣀             agent workspace                                
         ⢀⣴⣾⢿⣳⡿⠛⠙⢿⣾⣿⣷⣦           model     —                                    
  ⢀ ⣴⠆  ⣰⣿⣿⣵⠟⠉    ⠙⠻⣿⠿⣾⣦         workspace ~/workspace                          
 ⠈⠛⠃⡁⡀  ⣿⡻⢾⡇ ⣶⣶  ⣶⣆ ⢻⣥⣿⣿⡄        branch    — · session new                      
 ⢀⣤⣶⣿⡣⣤⢀⢽⠿⣮⢷⣄⣉⠁  ⠉⣁⣤⡎⣵⠟⣭⣁⡔⢿⣄⡀                                                   
 ⣾⣿⠛⢹⡇⠈⢨⣶⡶⠎⢛⡿⣿⣳⡆⣶⣿⡿⣟⣋⢷⣶⣮⡅⢸⡜⢿⣿⡄   What should we work through?                   
 ⠈⠻⠁   ⠘⠞⠁ ⠒⠁ ⠉⠁⠉⠉ ⠉⠑ ⠈⣿⠇ ⠁⠈⠿⠁                                                  
                                                                                
                                                                                
❯ 中 文 输 入 按 终 端 单 元 换 行 ， 组 合 字 符  café 和 家 庭 表 情  👨‍👩‍👧‍👦  必 须 保 持 完 整 ， 不 可 以 被 拆   
  开 。                                                                           
                                                                                
⏺ 收 到 。 中 文 、 组 合 字 符 与  emoji 会 保 持 完 整 。                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
